...
            android:layout_height="80dp"
            android:layout_marginTop="10dp" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:id="@+id/movie_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/movie_load_progress"
            android:layout_alignParentTop="true"
            android:horizontalSpacing="0.5dp"
            android:numColumns="@integer/number_of_columns"
...
