...
            android:text="Star wars -  O Despertar da Força"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/container_info"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/container_info"
            android:ellipsize="end"
...
