...
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/synopsis"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:text="" />
...
